fix title and remove scrollbar

--- a/src/styles/estate-sale-list.module.scss
+++ b/src/styles/estate-sale-list.module.scss
@@ -159,6 +159,10 @@
 		bottom: 0;
 		left: 0;
 
+		&::-webkit-scrollbar {
+			display: none;
+		}
+
 		.content {
 			height: unset;
 		}
